Fixed Issues with user properties